--- a/XboxDownload/app.config
+++ b/XboxDownload/app.config
@@ -22,6 +22,9 @@
       <setting name="AppIP" serializeAs="String">
         <value />
       </setting>
+      <setting name="EAIP" serializeAs="String">
+        <value />
+      </setting>
       <setting name="Redirect" serializeAs="String">
         <value>True</value>
       </setting>
@@ -51,9 +54,6 @@
       </setting>
       <setting name="NextUpdate" serializeAs="String">
         <value>0</value>
-      </setting>
-      <setting name="EaIP" serializeAs="String">
-        <value />
       </setting>
     </XboxDownload.Properties.Settings>
   </userSettings>
